--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p>Desenvolvido por Felipe Macedo Ribeiro</p>
             <p>Instrutora: Fernanda Côrrea</p>
             <p>Facilitador: João Pedro</p>
-            <p class="quartoparagrafo">Layout criado para fins de estudos na escola vai na web</p>
+            <p class="quartoparagrafo">Layout criado para fins de estudos na escola Vi na Web</p>
         </section>
         <!-- Logo do Outubro Rosa no rodapé -->
         <section>
