Alteração no link da página

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <!-- Menu de navegação -->
         <nav>
             <ul>
-                <li><a href="#" aria-label="Ir para a seção Sobre">Sobre</a></li>
-                <li><a href="#" aria-label="Ir para a seção Conscientização">Conscientização</a></li>
-                <li><a href="#" aria-label="Ir para a seção Dicas">Dicas</a></li>
+                <li><a href="#secao1" aria-label="Ir para a seção Sobre">Sobre</a></li>
+                <li><a href="#secao2" aria-label="Ir para a seção Conscientização">Conscientização</a></li>
+                <li><a href="#imagensdeConscientizacao" aria-label="Ir para a seção Dicas">Dicas</a></li>
             </ul>
         </nav>
     </header>
@@ -44,18 +44,18 @@
     <main>
         <section>
             <!-- Primeira seção com informações sobre a campanha -->
-            <section class="secao1">
+            <section class="secao1" id="secao1">
                 <p>Outubro Rosa alerta sobre prevenção e diagnóstico precoce do câncer de mama. O mês de Outubro já é conhecido mundialmente como um mês marcado por ações afirmativas relacionadas à prevenção e diagnóstico precoce do câncer de mama. O movimento, conhecido como Outubro Rosa, é celebrado anualmente desde os anos 90.</p>
                 <!-- Imagem ilustrativa com descrição apropriada -->
                 <img src="./img/Voce-sabe-o-que-e-outubro-rosa 1.png" alt="Foto reunindo várias mão segurando o símbolo em conscientização ao Outubro Rosa da prevenção do câncer de mama">
             </section>
             <!-- Segunda seção com eventos e atividades de conscientização -->
-            <section class="secao2">
+            <section class="secao2" id="secao2">
                 <img src="./img/3d361f1e-37ee-4a0b-a2b1-511fcab9f666 1.png" alt="Foto de várias pessoas em uma passeata conscientizando sobre o Outubro Rosa">
                 <p>Outubro Rosa promove a conscientização sobre o câncer de mama com corridas e caminhadas. Esses eventos incentivam a prevenção e o diagnóstico precoce, reunindo pessoas em apoio à causa.Participantes vestem rosa e percorrem distâncias variadas.</p>
                 </section>
             <!-- Seção com imagens de conscientização -->
-            <section class="imagensdeConscientizacao">
+            <section class="imagensdeConscientizacao" id="imagensdeConscientizacao">
                 <!-- Imagens com informações de prevenção e cuidados -->
                 <img src="./img/imagemMamografia 1.png" oncontextmenu="return false;" alt="Imagem com a escrita 'Faça mamografia anual a partir dos 40 anos.'">
                 <img src="./img/imagemAlimentaçãoSaudável 1.png" oncontextmenu="return false;" alt="Imagem com a escrita 'Mantenha uma alimentação saudável'">
