Alteração no rodapé da página: adição de links das redes sociais.

--- a/index.html
+++ b/index.html
@@ -57,33 +57,36 @@
             <!-- Seção com imagens de conscientização -->
             <section class="imagensdeConscientizacao" id="imagensdeConscientizacao">
                 <!-- Imagens com informações de prevenção e cuidados -->
-                <img src="./img/imagemMamografia 1.png" oncontextmenu="return false;" alt="Imagem com a escrita 'Faça mamografia anual a partir dos 40 anos.'">
-                <img src="./img/imagemAlimentaçãoSaudável 1.png" oncontextmenu="return false;" alt="Imagem com a escrita 'Mantenha uma alimentação saudável'">
-                <img src="./img/imagemConsultaMedica 1.png" oncontextmenu="return false;" alt="Imagem com a escrita 'Vá ao médico regularmente'">
-                <img src="./img/imagemProibidoBebereFumar 1.png" oncontextmenu="return false;" alt="Imagem com a escrita 'Evite o consumo de bebida alcóolica e tabagismo'"> 
+                <img src="./img/imagemMamografia 1.png" oncontextmenu="return false;" alt="Imagem com a descrição 'Faça mamografia anual a partir dos 40 anos.'">
+                <img src="./img/imagemAlimentaçãoSaudável 1.png" oncontextmenu="return false;" alt="Imagem com a descrição 'Mantenha uma alimentação saudável'">
+                <img src="./img/imagemConsultaMedica 1.png" oncontextmenu="return false;" alt="Imagem com a descrição 'Vá ao médico regularmente'">
+                <img src="./img/imagemProibidoBebereFumar 1.png" oncontextmenu="return false;" alt="Imagem com a descrição 'Evite o consumo de bebida alcóolica e tabagismo'"> 
             </section>
         </section>
     </main>
     
     <!-- Rodapé da página -->
     <footer>    
-        <!-- Seção de links para redes sociais -->
-        <nav class="redesSociais">
-            <a href="#" aria-label="Acessar o perfil no LinkedIn"><img src="./img/linkedIn.png" alt="Logo do linkedIn"></a>
-            <a href="#" aria-label="Acessar o perfil no Instagram"><img src="./img/instagram.png" alt="Logo do Instagram"></a>
-            <a href="#" aria-label="Acessar o perfil no Github"><img src="./img/github.png" alt="Logo do Github"></a>
-        </nav>
-        <!-- Informações de direitos autorais e colaboradores -->
-        <section class="caixaDireitosAutorais">
-            <p>Desenvolvido por Felipe Macedo Ribeiro</p>
-            <p>Instrutora: Fernanda Côrrea</p>
-            <p>Facilitador: João Pedro</p>
-            <p class="quartoparagrafo">Layout criado para fins de estudos na escola Vai na Web</p>
-        </section>
-        <!-- Logo do Outubro Rosa no rodapé -->
-        <section>
-            <img src="./img/outubro-rosa 1.png" oncontextmenu="return false;" alt="logo do Outubro Rosa" class="outubroRosa">
-        </section>
+        <!--Sessão de endereços e links da página -->
+        <address>
+            <!-- Seção de links para redes sociais -->
+            <nav class="redesSociais">
+                <a href="https://www.linkedin.com/in/felipe-macedo-dev/" aria-label="Acessar o perfil no LinkedIn" target="_blank"><img src="./img/linkedIn.png" alt="Logo do linkedIn"></a>
+                <a href="https://www.instagram.com/felipe_macedor/" aria-label="Acessar o perfil no Instagram" target="_blank"><img src="./img/instagram.png" alt="Logo do Instagram"></a>
+                <a href="https://github.com/FehMacedo10" aria-label="Acessar o perfil no Github" target="_blank"><img src="./img/github.png" alt="Logo do Github"></a>
+                </nav>
+            <!-- Informações de direitos autorais e colaboradores -->
+            <section class="caixaDireitosAutorais">
+                <p>Desenvolvido por Felipe Macedo Ribeiro</p>
+                <p>Instrutora: Fernanda Côrrea</p>
+                <p>Facilitador: João Pedro</p>
+                <p class="quartoparagrafo">Layout criado para fins de estudos na escola Vai na Web</p>
+            </section>
+            <!-- Logo do Outubro Rosa no rodapé -->
+            <section>
+                <img src="./img/outubro-rosa 1.png" oncontextmenu="return false;" alt="logo do Outubro Rosa" class="outubroRosa">
+            </section>
+        </address>
     </footer>
 </body>
 
